--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     />
     <title>Chat Site</title>
   </head>
-  <body class="bg-white dark:bg-gray-800">
+  <body class="bg-white dark:bg-gray-800 text-gray-900 dark:text-gray-100">
     <div class="flex w-full">
       <!-- Icons Bar Container -->
-      <div id="icons-container" class="flex flex-col justify-between py-5">
+      <div id="icons-container" class="flex flex-col justify-between py-5 px-3 shadow-xl dark:shadow-2xl">
         <!-- Top Icons -->
         <ul class="flex flex-col items-center space-y-4">
           <div class="w-10">
@@ -28,11 +28,15 @@
           <li id="calls-icon">
             <i class="fa-solid fa-phone"></i>
           </li>
+          <div class="border w-5 border-gray-300 dark:border-gray-600"></div>
+          <li id="ai-icon">
+            <i class="fa-solid fa-brain"></i>
+          </li>
         </ul>
 
         <!-- Bottom Icons -->
         <ul class="flex flex-col items-center space-y-4">
-          <li id="night-mode-icon">
+          <li id="dark-mode-icon">
             <i class="fa-solid fa-moon"></i>
           </li>
           <li id="starred-messages-icon">
@@ -41,7 +45,7 @@
           <li id="archived-chats-icon">
             <i class="fa-solid fa-box-archive"></i>
           </li>
-          <div class="border w-5"></div>
+          <div class="border w-5 border-gray-300 dark:border-gray-600"></div>
           <li id="settings-icon">
             <i class="fa-solid fa-gear"></i>
           </li>
@@ -56,21 +60,21 @@
         <!-- Chats Sidebar -->
         <div
           id="chats-sidebar-container"
-          class="hidden w-2xs py-6 px-2 h-screen flex flex-col"
+          class="hidden w-2xs py-6 px-2 h-screen flex flex-col shadow-2xl"
         >
           <!-- Label -->
           <label class="mb-5 block font-bold text-xl shrink-0">Chats</label>
 
           <!-- Search Bar -->
           <div
-            class="bg-gray-200 rounded-lg p-2 focus-within:ring-2 focus-within:ring-indigo-300 mb-5 shrink-0"
+            class="bg-gray-200 dark:bg-gray-700 rounded-lg p-2 focus-within:ring-2 focus-within:ring-indigo-300 dark:focus-within:ring-indigo-600 mb-5 shrink-0 flex items-center"
           >
-            <i class="fa-solid fa-magnifying-glass mr-2 text-gray-400"></i>
+            <i class="fa-solid fa-magnifying-glass mr-2 text-gray-400 dark:text-gray-500"></i>
             <input
               id="conversations-search"
               type="search"
               placeholder="Search for chat"
-              class="focus:outline-none placeholder:text-gray-400"
+              class="focus:outline-none placeholder:text-gray-400 dark:placeholder:text-gray-500 flex-1"
             />
           </div>
 
@@ -80,12 +84,12 @@
             class="flex flex-col flex-1 justify-center items-center space-y-1.5"
           >
             <div
-              class="w-14 h-14 bg-gray-300 rounded-full flex justify-center items-center mb-5"
+              class="w-14 h-14 bg-gray-300 dark:bg-gray-600 rounded-full flex justify-center items-center mb-5"
             >
-              <i class="fa-solid fa-comment fa-xl opacity-60"></i>
+              <i class="fa-solid fa-comment fa-xl text-gray-500 dark:text-gray-400"></i>
             </div>
             <h3 class="font-bold">No Chats Yet</h3>
-            <p class="text-sm opacity-80 text-gray-700 text-center">
+            <p class="text-sm opacity-80 text-gray-700 dark:text-gray-300 text-center">
               Select a contact from contacts list to chat with.
             </p>
           </div>
@@ -108,14 +112,14 @@
 
           <!-- Search Bar -->
           <div
-            class="bg-gray-200 rounded-lg p-2 focus-within:ring-2 focus-within:ring-indigo-300 mb-5 shrink-0"
+            class="bg-gray-200 dark:bg-gray-700 rounded-lg p-2 focus-within:ring-2 focus-within:ring-indigo-300 dark:focus-within:ring-indigo-600 mb-5 shrink-0 flex items-center"
           >
-            <i class="fa-solid fa-magnifying-glass mr-2 text-gray-400"></i>
+            <i class="fa-solid fa-magnifying-glass mr-2 text-gray-400 dark:text-gray-500"></i>
             <input
               id="contacts-search"
               type="search"
               placeholder="Search for contact"
-              class="focus:outline-none placeholder:text-gray-400"
+              class="focus:outline-none placeholder:text-gray-400 flex-1"
             />
           </div>
 
@@ -125,12 +129,12 @@
             class="hidden flex flex-col flex-1 justify-center items-center space-y-1.5"
           >
             <div
-              class="w-14 h-14 bg-gray-300 rounded-full flex justify-center items-center mb-5"
+              class="w-14 h-14 bg-gray-300 dark:bg-gray-600 rounded-full flex justify-center items-center mb-5"
             >
-              <i class="fa-solid fa-user"></i>
+              <i class="fa-solid fa-user fa-xl text-gray-500 dark:text-gray-400"></i>
             </div>
             <h3 class="font-bold">No contacts Yet</h3>
-            <p class="text-sm opacity-80 text-gray-700 text-center">
+            <p class="text-sm opacity-80 text-gray-700 dark:text-gray-300  text-center">
               Add a contact to chat with.
             </p>
           </div>
@@ -148,15 +152,15 @@
         <!-- Chat Empty State -->
         <div
           id="main-empty-chat"
-          class="h-screen flex flex-col flex-1 justify-center items-center space-y-1.5"
+          class="hidden h-screen flex flex-col flex-1 justify-center items-center space-y-1.5"
         >
           <div
-            class="w-14 h-14 bg-gray-300 rounded-full flex justify-center items-center mb-5"
+            class="w-14 h-14 bg-gray-300 dark:bg-gray-600 rounded-full flex justify-center items-center mb-5"
           >
-            <i class="fa-solid fa-comment fa-xl opacity-60"></i>
+            <i class="fa-solid fa-comment fa-xl opacity-60 text-gray-500 dark:text-gray-400"></i>
           </div>
           <h3 class="font-bold">No Chat Selected</h3>
-          <p class="text-sm opacity-80 text-gray-700">
+          <p class="text-sm opacity-80 text-gray-700 dark:text-gray-300">
             Select a chat from the chat menu.
           </p>
         </div>
@@ -166,7 +170,7 @@
           id="main-chat-container"
           class="hidden flex-1 h-screen flex flex-col"
         >
-          <header class="flex justify-between py-4 px-3 bg-gray-200">
+          <header class="flex justify-between py-4 px-3">
             <div class="flex items-center space-x-2">
               <img
                 id="contact-avatar"
@@ -187,7 +191,7 @@
           <!-- Chat Content -->
           <main
             id="chat-content"
-            class="flex-1 overflow-y-auto flex flex-col gap-2 p-4 bg-gray-100"
+            class="flex-1 overflow-y-auto flex flex-col gap-2 p-4 bg-gray-100 dark:bg-gray-900"
           ></main>
 
           <!-- Message Input -->
@@ -197,11 +201,50 @@
             <input
               id="message-input"
               type="text"
-              placeholder="Type a message"
-              class="flex-1 focus:outline-none bg-gray-200 p-2 rounded"
+              placeholder="Type a message (Press ctrl+m to simulate a message)"
+              class="flex-1 focus:outline-none bg-gray-200 dark:bg-gray-700 p-2 rounded"
             />
             <i class="fa-solid fa-microphone"></i>
             <i id="send-button" class="fa-solid fa-paper-plane"></i>
+          </div>
+        </div>
+
+        <!-- Chatbot -->
+        <div
+          id="bot-chat-container"
+          class="hidden flex-1 h-screen flex flex-col"
+        >
+          <header class="flex justify-between py-4 px-3">
+            <div class="flex items-center space-x-2">
+              <img
+                src="imgs/chat-bot-icon.png"
+                alt=""
+                class="w-10 h-10 rounded-full flex-shrink-0"
+              />
+              <h3 class="font-bold">Chatbot</h3>
+            </div>
+            <div class="flex items-center space-x-1">
+              <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+            </div>
+          </header>
+
+          <!-- Chat Content -->
+          <main
+            id="bot-chat-content"
+            class="flex-1 overflow-y-auto flex flex-col gap-2 p-4 bg-gray-100 dark:bg-gray-900"
+          ></main>
+
+          <!-- Message Input -->
+          <div id="bot-footer" class="flex items-center py-4 w-full space-x-3 px-3">
+            <i class="fa-solid fa-paperclip"></i>
+            <i class="fa-regular fa-face-smile"></i>
+            <input
+              id="bot-message-input"
+              type="text"
+              placeholder="Type a message (Press ctrl+m to simulate a message)"
+              class="flex-1 focus:outline-none bg-gray-200 dark:bg-gray-700 p-2 rounded"
+            />
+            <i id="bot-send-button" class="fa-solid fa-paper-plane"></i>
           </div>
         </div>
       </main>
